--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ volumes:
   local_postgres_data: {}
   local_postgres_data_backups: {}
 services:
-  redis:
-    image: redis
+  # redis:
+  #   image: redis
   db:
     image: postgres
     volumes:
@@ -12,16 +12,16 @@ services:
       - local_postgres_data_backups:/backups    
     ports:
       - "5432:5432"
-  celery:
-    build: .
-    command: "celery -A iot.celery worker --loglevel=info"
-    volumes:
-      - ./app/:/app
-    env_file:
-      - ./env/web-var.env
-    depends_on:
-      - redis
-      - web
+  # celery:
+  #   build: .
+  #   command: "celery -A iot.celery worker --loglevel=info"
+  #   volumes:
+  #     - ./app/:/app
+  #   env_file:
+  #     - ./env/web-var.env
+  #   depends_on:
+  #     - redis
+  #     - web
   web:
     build: .
     command: gunicorn -w 4 -b 0.0.0.0:5000 iot:create_app()
@@ -30,6 +30,6 @@ services:
     volumes:
       - ./app/:/app
     ports:
-      - "8000:5000"
+      - "5000:5000"
     depends_on:
       - db
