--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,10 @@ volumes:
   local_postgres_data: {}
   local_postgres_data_backups: {}
 services:
-  # redis:
-  #   image: redis
+  redis:
+    image: redis
+    ports:
+      - "6379:6379"
   db:
     image: postgres
     volumes:
@@ -12,24 +14,24 @@ services:
       - local_postgres_data_backups:/backups    
     ports:
       - "5432:5432"
-  # celery:
-  #   build: .
-  #   command: "celery -A iot.celery worker --loglevel=info"
-  #   volumes:
-  #     - ./app/:/app
-  #   env_file:
-  #     - ./env/web-var.env
-  #   depends_on:
-  #     - redis
-  #     - web
+  celery:
+    build: .
+    command: "celery -A iot.celery worker --loglevel=info"
+    volumes:
+      - ./app/:/app
+    env_file:
+      - ./env/web-var.env
+    depends_on:
+      - redis
+      - web
   web:
     build: .
-    command: gunicorn -w 4 -b 0.0.0.0:5000 iot:create_app()
+    command: flask run --host=0.0.0.0
     env_file:
       - ./env/web-var.env
     volumes:
       - ./app/:/app
     ports:
-      - "5000:5000"
+      - "8000:5000"
     depends_on:
       - db
