working on apis

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,16 +14,16 @@ services:
       - local_postgres_data_backups:/backups    
     ports:
       - "5432:5432"
-  celery:
-    build: .
-    command: "celery -A iot.celery worker --loglevel=info"
-    volumes:
-      - ./app/:/app
-    env_file:
-      - ./env/web-var.env
-    depends_on:
-      - redis
-      - web
+  # celery:
+  #   build: .
+  #   command: "celery -A iot.celery worker --loglevel=info"
+  #   volumes:
+  #     - ./app/:/app
+  #   env_file:
+  #     - ./env/web-var.env
+  #   depends_on:
+  #     - redis
+  #     - web
   web:
     build: .
     command: flask run --host=0.0.0.0
